first page complete

--- a/index.html
+++ b/index.html
@@ -36,6 +36,19 @@
                 <div class="icon"><a href="https://twitter.com/zerryyy_" target="_blank"><i class="fa-brands fa-twitter"></i></a></div>
                 <div class="icon"><a href="https://github.com/muhammaduzair19/" target="_blank"><i class="fa-brands fa-github"></i></a></div>
             </div>
+            <div class="downhire">
+
+                <div class="btndh" id="download">
+                    <a href="./CV.pdf" target="_blank">
+                        DOWNLOAD CV
+                    </a>
+                </div>
+                <div class="btndh" id="hire">
+                    <a href="#">
+                        HIRE ME
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 </body>
