--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div>Muhammad Uzair</div>
             </div>
             <div class="mainnav">
-                <a href="#"  class="button" id="about">About</a>
+                <a href="./about.html"  class="button" id="about">About</a>
                 <a href="#"  class="button" id="skills">Skills</a>
                 <a href="#"  class="button" id="exp">Experience</a>
                 <a href="#"  class="button" id="edu">Education</a>
