--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
         </div>
         <div class="bg">
             <div id="dp"></div>
+            <br>
             <div id="mainname">Muhammad Uzair</div>
-            <div id="work">Mern Stack Developer and BD Executive</div>
+            <div id="work"><abbr title="MONGODB EXPRESS REACT NODE.JS" style="text-decoration: none;">MERN</abbr> Stack Developer and <abbr title="Business Development" style="text-decoration: none;">BD</abbr> Executive</div>
             <br>
             <div class="icons">
                 <div class="icon"><a href="https://www.linkedin.com/in/muhammaduzair19/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
@@ -39,8 +40,8 @@
                 <div class="icon"><a href="https://twitter.com/zerryyy_" target="_blank"><i class="fa-brands fa-twitter"></i></a></div>
                 <div class="icon"><a href="https://github.com/muhammaduzair19/" target="_blank"><i class="fa-brands fa-github"></i></a></div>
             </div>
+            <br>
             <div class="downhire">
-
                 <div class="btndh" id="download">
                     <a href="./CV.pdf" target="_blank">
                         DOWNLOAD CV
