--- a/about.html
+++ b/about.html
@@ -4,14 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="about.css">
     <title>About</title>
 </head>
 <body>
     <div class="main">
+        <div class="mainhead">
+            <div class="header">
+                <div class="about">About</div>
+                <div class="back"><a href="./index.html"><i class="fa-solid fa-house-user"></i></a></div>
+            </div>
+        </div>
         <div class="description">
-            <div class="head"><p>About Me</p></div>
-            <div class="head"><p>Bio</p></div>
+            <div class="head" id="aboutme"><p>About Me</p></div>
+            <div class="head" id="bio"><p>Bio</p></div>
         </div>
     </div>
 </body>
