--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="mainnav">
                 <a href="./about.html"  class="button" id="about">About</a>
-                <a href="#"  class="button" id="skills">Skills</a>
+                <a href="./skills.html"  class="button" id="skills">Skills</a>
                 <a href="#"  class="button" id="exp">Experience</a>
                 <a href="#"  class="button" id="edu">Education</a>
                 <a href="#"  class="button" id="portfolio">Portfolio</a>
